tests/invalid/List_Invalid_1.whiley
method main() -> void:
    [int] a2
    int x = 1
    a2[0] = x
